--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
 
   --clr-main: #1b1b1e;
   --clr-accent: #58a4b0;
-  --clr-main-inversered: ;
-  --clr-accent-inversed: ;
+  --clr-main-inversed: #d8dbe2;
+  --clr-accent-inversed: #58a4b0 ;
 
   --bg-color: #d8dbe2;
   --bg-accent: #a9bcd0;
-  --bg-color-inversed: ;
-  --bg-accent-inversed: ;
+  --bg-color-inversed: #1b1b1e;
+  --bg-accent-inversed: #a9bcd0;
 
   font-size: 16px;
 }
@@ -56,6 +56,9 @@ a {
   text-decoration: none;
 }
 
+strong {
+  color: var(--clr-accent);
+}
 
 
 /* NavBar CSS  Start*/
@@ -71,6 +74,7 @@ a {
   justify-content: space-between;
   align-items: center;
   min-height: 8vh;
+  max-height: 10vh;
   background-color: #58a4b0;
 }
 
@@ -79,7 +83,14 @@ a {
   color: var(--clr-main);
   font-size: 2rem;
   float: left;
-  padding: 0 0 0 3rem;
+  padding: 0 0 0 1.75rem;
+}
+
+.logo img {
+  max-height: 6vh;
+  padding-top: .5rem;
+  margin: 0 auto;
+
 }
 
 .logo a {
@@ -215,9 +226,6 @@ nav ul {
   opacity: .9;
 }
 
-.about-me strong {
-  color: var(--clr-accent);
-}
 
 /* Work Experience CSS */
 
@@ -348,7 +356,7 @@ nav ul {
   width: 50px;
   height: 50px;
   position: fixed;
-  bottom: 40px;
+  bottom: 80px;
   right: 30px;
   background: var(--clr-accent);
   -webkit-border-radius: 35px;
@@ -365,7 +373,7 @@ nav ul {
   margin: 0;
   position: relative;
   left: 13px;
-  top: 11px;
+  top: 12px;
   height: 25px;
   width: 25px;
   -webkit-transition: all 0.3s ease;
@@ -375,6 +383,7 @@ nav ul {
   transition: all 0.3s ease;
 }
 
+
 #to-top:hover {
   background: #a9bcd0;
 }
@@ -383,5 +392,51 @@ nav ul {
   top: 5px;
 }
 
+/* End of to top button*/
 
-/*   */
+/* Dark Mode Button */
+
+#dark-mode {
+  opacity: 1;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 25px;
+  right: 30px;
+  background: var(--clr-accent);
+  -webkit-border-radius: 35px;
+  -moz-border-radius: 35px;
+  border-radius: 35px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+
+#dark-mode img {
+  margin: 0;
+  position: relative;
+  left: 12.5px;
+  top: 12px;
+  height: 25px;
+  width: 25px;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+}
+
+
+#dark-mode:hover {
+  background: #a9bcd0;
+}
+
+
+
+
