--- a/style.css
+++ b/style.css
@@ -2,21 +2,24 @@
   --ff-title: "PT Sans", sans-serif;
   --ff-text: "PT Sans", sans-serif;
 
-  --clr-main: #1b1b1e;
+  --clr-main: #d8dbe2;
   --clr-accent: #58a4b0;
-  --clr-main-inversed: #d8dbe2;
+  --clr-main-inversed: #1b1b1e;
   --clr-accent-inversed: #58a4b0 ;
 
-  --bg-color: #d8dbe2;
-  --bg-accent: #a9bcd0;
-  --bg-color-inversed: #1b1b1e;
-  --bg-accent-inversed: #a9bcd0;
+  --bg-color: #1b1b1e;
+  --bg-color-inversed: #d8dbe2;
 
   font-size: 16px;
 }
 
 html {
   scroll-behavior: smooth;
+}
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 
@@ -52,7 +55,7 @@ ul {
 }
 
 a {
-  color: var(--clr-main);;
+  color: #1b1b1e;
   text-decoration: none;
 }
 
@@ -120,11 +123,11 @@ nav ul {
   font-weight: bold;
   letter-spacing: 1px;
   font-size: 20px;
-  color: var(--clr-main);
+
 }
 
 .nav-links a:hover {
-  color: var(--bg-color);
+  color: var(--bg-color-inversed);
 
 }
 
@@ -162,6 +165,7 @@ nav ul {
 
 #name-span {
   color: var(--clr-accent);
+  font-size: 4.5rem;
 }
 
 
@@ -217,6 +221,7 @@ nav ul {
 }
 
 #about-me-picture {
+  margin-left: 3rem;
   grid-column: 2;
   grid-row: 1/4;
   object-fit: cover;
@@ -235,11 +240,17 @@ nav ul {
 }
 
 .content-container {
-  width: 80%;
+  width: 90%;
   height: 80%;
-  background-color: beige;
   margin: 0 auto;
   white-space: nowrap;
+}
+
+.content-container h3 {
+  text-align: center;
+  margin: 0 auto;
+  font-size: 2rem;
+  padding-bottom: 1rem;
 }
 /* Slider CSS */
 
@@ -257,33 +268,131 @@ nav ul {
 
 .xp-showing {
   transform: translate(-100%);
-  transition: ease-in 1s;
+  transition: all ease-in 1s;
 }
 
 .xp-hidden {
   transform: translate(150%);
-  transition: ease-out 1s;
+  transition: all ease-out 1s;
 }
 
 .map-showing {
   transform: translate(0%);
-  transition: ease-in 1s;
+  transition: all ease-in 1s;
 }
 
 .map-hidden {
   transform: translate(-150%);
-  transition: ease-out 1s;
+  transition: all ease-out 1s;
 }
 
 /* Styles for Box experience */
 
 #xp-txt {
+  vertical-align:top;
   display: inline-block;
+  white-space: normal;
   margin: 0 auto;
-  min-height: 100%;
-  min-width: 100%;
-  background-color: black;
+  height: 100%;
+  width: 100%;
 }
+
+.button-container {
+  padding-top: 1.5rem;
+  display: flex;
+  justify-content: center;
+}
+
+.job-selector {
+  width: 33.3333%;
+  font-size: 2rem;
+  padding: 1rem 0 1rem 0;
+  background-color: var(--bg-color);
+  color: var(--clr-main);
+  border: solid 2px var(--clr-accent);
+}
+
+.glowing {
+  box-shadow: 0 8px 8px rgba(20, 88, 99, 0.7);
+}
+
+.job-selector:hover{
+  box-shadow: 0 8px 8px rgba(20, 88, 99, 0.7);
+}
+
+.text-container {
+  width: 100%;
+  max-height: 80%;
+}
+
+#job {
+  text-align: center;
+  margin: 0 auto;
+  padding-top: .5rem;
+  padding-bottom: 0;
+  font-size: 2.75rem;
+}
+
+#title {
+  text-align: center;
+  margin: 0 auto;
+  font-size: 1.75rem;
+  color: var(--clr-accent);
+}
+#date {
+  text-align: center;
+  margin: 0 auto;
+  font-size: 1.75rem;
+}
+
+#hr-line{
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 3px solid var(--clr-accent);
+  margin: 1em 0;
+  padding: 0;
+}
+
+.job-description-container {
+  display: flex;
+  justify-content: center;
+  height: 80%;
+  width: 100%;
+}
+
+.job-description-text {
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.job-description-text ul {
+  list-style-type: disc;
+}
+
+.job-description-text h4 {
+  font-size: 2rem;
+  margin: 0;
+}
+
+.positions {
+  margin: 0 auto;
+  text-align: center;
+  font-size: 2.5rem;
+  text-decoration: underline solid var(--clr-accent);
+}
+
+.job-description-text p {
+  font-size: 1.25rem;
+}
+
+
+
+
+
+
+
 
 /* Styles for map icons and popups CSS */
 .marker {
@@ -313,29 +422,36 @@ nav ul {
 }
 
 #map h3 {
+  padding: 0 0 .5rem 0;
   font-size: 1.5rem;
   margin: 0 auto;
-  color: var(--clr-main);
+  text-align: center;
+  color: var(--clr-main-inversed);
 }
 
 #map h4 {
+  text-align: center;
   margin: 0 auto;
-  padding: 0.5rem 0 0 0;
+  padding-bottom: 0;
   font-size: 1rem;
   color: var(--clr-accent);
 }
 
 #map p {
-  font: 0.95rem;
+  font: 1rem;
   line-height: 1rem;
   padding-top: 0.25rem;
   margin: 0 auto;
-  color: var(--clr-main);
+  color: var(--clr-main-inversed);
 }
 
 /* end of map icons and popups CSS */
 
 /* Contact page CSS */
+
+#contact {
+  padding: 10rem 0 3rem 0;
+}
 
 #social-media {
   text-align: center;
@@ -348,6 +464,20 @@ nav ul {
 }
 
 
+
+/* Footer Section */
+
+footer { 
+  width: 100%;
+  border-top: solid 3px var(--clr-accent);
+}
+
+footer p {
+  margin: 0 auto;
+  padding: 5px 0 5px 0;
+  text-align: center;
+  font-weight: bold;
+}
 
 /* Back to Top Arrow */
 
@@ -437,6 +567,531 @@ nav ul {
   background: #a9bcd0;
 }
 
+
+/* Media Queries */
+
+@media screen and (min-width: 320px) and (max-width: 480px)  {
+  :root{
+    font-size: 6px;
+  }
+
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+  body {
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    overflow-x: hidden;
+    font-family: var(--ff-text);
+    color: var(--clr-main);
+    background-color: var(--bg-color);
+  }
+
+  .title-text {
+    font-size: 7rem;
+  }
+
+
+  #name-span {
+    font-size: 20px;
+  }
+
+  .intro-section {
+    height: 82vh;
+  }
+
+  #description-intro {
+    font-size: 1.5rem;
+  }
+
+  #quote-intro {
+    font-size: 1.5rem;
+  }
+  
+  .about-me{
+    min-height: 950px;
+  }
+
+  .about-me-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  #about-me-picture {
+    margin: 0 auto;
+    max-width: 80%;
+    padding: 1rem 0 0 0;
+  }
+
+  #about-me-text {
+    margin: 0 auto;
+    padding: 1rem 0 0 0;
+    max-width: 90%;
+  }
+
+  #about-me p {
+    padding-bottom: 1rem;
+    font-size: 2rem;
+    line-height: 2.3rem;
+  }
+  
+  .work-experience {
+    min-height: 950px;
+  }
+
+  .btn-container {
+    visibility: hidden;
+  }
+
+  .button-container {
+    padding: 0;
+  }
+
+  .job-selector {
+    font-size: 2rem;
+  }
+
+  #job {
+    font-size: 4rem;
+    padding-top: 2rem;
+  }
+
+  #title {
+    font-size: 3rem;
+  }
+
+  #date {
+    font-size: 2.5rem;
+  }
+
+  .job-description-container h5 {
+    font-size: 3.5rem;
+  }
+
+  .job-description-text p {
+    font-size: 1.75rem;
+    line-height: 2.2rem;
+  }
+
+  #contact{
+    max-width: 100%;
+  }
+  #social-media {
+    margin: 0 auto;
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+  }
+  #footer p {
+    font-size: 2rem;
+  }
+
+
+
+
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px)  {
+  :root{
+    font-size: 8px;
+  }
+
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+  body {
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    overflow-x: hidden;
+    font-family: var(--ff-text);
+    color: var(--clr-main);
+    background-color: var(--bg-color);
+  }
+
+  .title-text {
+    font-size: 7rem;
+  }
+
+
+  #name-span {
+    font-size: 4rem;
+  }
+
+  .intro-section {
+    height: 82vh;
+  }
+
+  #description-intro {
+    font-size: 11px;
+  }
+
+  #quote-intro {
+    font-size: 11px;
+  }
+
+  .about-me {
+    min-height: 1100px;
+  }
+  
+  .about-me-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 90%;
+  }
+
+  #about-me-picture {
+    margin: 0 auto;
+    max-width: 70%;
+    padding: 1rem 0 0 0;
+  }
+
+  #about-me-text {
+    margin: 0 auto;
+    padding: 1rem 0 0 0;
+    max-width: 90%;
+  }
+
+  #about-me p {
+    padding-bottom: 1rem;
+    font-size: 2rem;
+    line-height: 2.2rem;
+  }
+  
+  .work-experience {
+    min-height: 1000px;
+  }
+
+  .button-container {
+    padding: 0;
+  }
+
+  .job-selector {
+    font-size: 3rem;
+  }
+
+  #job {
+    font-size: 4rem;
+    padding-top: 2rem;
+  }
+
+  #title {
+    font-size: 3rem;
+  }
+
+  #date {
+    font-size: 2.5rem;
+  }
+
+  .job-description-container h5 {
+    font-size: 3.5rem;
+  }
+
+  .job-description-text p {
+    font-size: 1.75rem;
+    line-height: 2.2rem;
+  }
+
+  #contact{
+    max-width: 100%;
+  }
+  #social-media {
+    margin: 0 auto;
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+  }
+  #footer p {
+    font-size: 2rem;
+  }
+
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px)  {
+  :root{
+    font-size: 8px;
+  }
+
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+  body {
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    overflow-x: hidden;
+    font-family: var(--ff-text);
+    color: var(--clr-main);
+    background-color: var(--bg-color);
+  }
+
+  .title-text {
+    font-size: 7rem;
+  }
+
+  .nav-links {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    padding-right: 1rem;
+  }
+
+  .nav-links a {
+    font-family: var(--ff-text);
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 13px;
+  
+  }
+
+  #name-span {
+    font-size: 4.5rem;
+  }
+
+  .intro-section {
+    height: 82vh;
+  }
+
+  .intro-section h2 {
+    font-size: 3.5rem;
+  }
+
+  #description-intro {
+    font-size: 17px;
+  }
+
+  #quote-intro {
+    font-size: 17px;
+  }
+
+  .about-me {
+    min-height: 1100px;
+  }
+  
+  .about-me-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 90%;
+    min-width: 750px;
+  }
+
+  #about-me-picture {
+    margin: 0 auto;
+    max-width: 325px;
+    max-height: 325px;
+    padding: 1rem 0 0 0;
+  }
+
+  #about-me-text {
+    margin: 0 auto;
+    padding: 1rem 0 0 0;
+    max-width: 90%;
+  }
+
+  #about-me p {
+    padding-bottom: 1rem;
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+  
+  .work-experience {
+    min-height: 1000px;
+  }
+
+  .button-container {
+    padding: 0;
+  }
+
+  .job-selector {
+    font-size: 3rem;
+  }
+
+  #job {
+    font-size: 4rem;
+    padding-top: 2rem;
+  }
+
+  #title {
+    font-size: 3rem;
+  }
+
+  #date {
+    font-size: 2.5rem;
+  }
+
+  .job-description-container h5 {
+    font-size: 3.5rem;
+  }
+
+  .job-description-text p {
+    font-size: 1.85rem;
+    line-height: 2.2rem;
+  }
+
+  #contact{
+    max-width: 100%;
+  }
+  #social-media {
+    margin: 0 auto;
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+  }
+  #footer p {
+    font-size: 2rem;
+  }
+
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1200px)  {
+  :root{
+    font-size: 12px;
+  }
+
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+  body {
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    overflow-x: hidden;
+    font-family: var(--ff-text);
+    color: var(--clr-main);
+    background-color: var(--bg-color);
+  }
+
+  .title-text {
+    font-size: 5rem;
+  }
+
+  .nav-links {
+    display: flex;
+    justify-content: space-around;
+    width: 40%;
+    padding-right: 1rem;
+  }
+
+  .nav-links a {
+    font-family: var(--ff-text);
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 15px;
+  
+  }
+
+  #name-span {
+    font-size: 4.5rem;
+  }
+
+  .intro-section {
+    height: 82vh;
+  }
+
+  .intro-section h2 {
+    font-size: 3.5rem;
+  }
+
+  #description-intro {
+    font-size: 20px;
+  }
+
+  #quote-intro {
+    font-size: 20px;
+  }
+
+  .about-me {
+    min-height: 1350px;
+  }
+  
+  .about-me-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 90%;
+    min-width: 750px;
+  }
+
+  #about-me-picture {
+    margin: 0 auto;
+    object-position: top;
+    min-width: 400px;
+    max-height: 300px;
+    padding: 1rem 0 0 0;
+  }
+
+  #about-me-text {
+    margin: 0 auto;
+    padding: 1rem 0 0 0;
+    max-width: 90%;
+  }
+
+  #about-me p {
+    padding-bottom: 1rem;
+    font-size: 1.5rem;
+    line-height: 1.75rem;
+  }
+  
+  .work-experience {
+    min-height: 1000px;
+  }
+
+  .button-container {
+    padding: 0;
+  }
+
+  .job-selector {
+    font-size: 2rem;
+  }
+
+  #job {
+    font-size: 3rem;
+    padding-top: 2rem;
+  }
+
+  #title {
+    font-size: 2.25rem;
+  }
+
+  #date {
+    font-size: 1.75rem;
+  }
+
+  .job-description-container h5 {
+    font-size: 3rem;
+  }
+
+  .job-description-text p {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  #contact{
+    max-width: 100%;
+  }
+  #social-media {
+    margin: 0 auto;
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+  }
+  #footer p {
+    font-size: 1.5rem;
+  }
+
+}
 
 
 
